force-app/main/default/objects/Harvest_logs__c/Harvest_logs__c.object-meta.xml
<CustomObject>
    <label>Harvest logs</label>
    <nameField>
        <label>Harvest logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>