force-app/main/default/objects/Harvest_logs__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Approved?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>