force-app/main/default/objects/Harvest_logs__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <label>Billable?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>