force-app/main/default/objects/Harvest_logs__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>