force-app/main/default/objects/Harvest_logs__c/fields/External_Reference_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_URL__c</fullName>
    <label>External Reference URL</label>
    <type>Url</type>
</CustomField>