force-app/main/default/objects/Harvest_logs__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <label>Invoiced?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>