force-app/main/default/objects/Harvest_logs__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <label>Project Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>