force-app/main/default/objects/Harvest_logs__c/fields/Project_Member_id__c.field-meta.xml
<CustomField>
    <fullName>Project_Member_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Member id</label>
    <referenceTo>Project_Member__c</referenceTo>
    <relationshipLabel>Harvest logs</relationshipLabel>
    <relationshipName>Harvest_logs</relationshipName>
    <type>Lookup</type>
</CustomField>