force-app/main/default/objects/Harvest_logs__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <length>200</length>
    <type>Text</type>
</CustomField>