force-app/main/default/objects/Harvest_logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Project__c</columns>
    <columns>Client__c</columns>
    <columns>Hours__c</columns>
    <columns>Project_Member_id__c</columns>
    <columns>Task__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>